Use hashmap for storing cache items